# pythonstoredatabase

./: README.md  app.py  database.py  main.py  models.py  my_store.db  pyproject.toml
templates/: product.html
